model Inquiry {
    inquire_id       String         @id @default(uuid())
    parent_id        String?
    fromuser_id      String?
    fromuser         User?          @relation("FromUser", fields: [fromuser_id], references: [user_id])
    entity_id        Int?
    entity           Entity?        @relation("ToEntity", fields: [entity_id], references: [entity_id])
    assigned_user_id String?
    assignUser       User?          @relation("AssignUser", fields: [assigned_user_id], references: [user_id])
    subject          String
    body             String
    inquiry_status   InquiryStatus?
    is_read          Boolean        @default(false)
    is_answer        Boolean        @default(false)
    created_at       DateTime       @default(now())
    updated_at       DateTime       @default(now())
    created_by       String?

    @@map("inquiry")
}
